<resources>
    <string name="app_name">Nuero Vent</string>
    <string name="hello">hello</string>
    <string name="login_with_google">Login with Google</string>
    <string name="welcome_to">Welcome to</string>
    <string name="email">Email Address</string>
    <string name="security_code">Security code</string>
    <string name="login">Login</string>
    <string name="fan_icon">Fan Icon</string>
    <string name="todo">todo</string>
    <string name="alerts">Alerts</string>
    <string name="stats_word">Stats</string>
    <string name="control">Control</string>
    <string name="dashboard">Dashboard</string>
    <string name="condition_stable">Condition stable</string>
    <string name="humidity">Humidity</string>
    <string name="_47_rh">47% RH</string>
    <string name="well_come_message">my name is derrick and hope you are doing well</string>
    <string name="neuro_vent">NEURO VENT</string>
    <string name="neuro_vent_caption">Neuro Vent</string>
    <string name="overheating">Overheating</string>
    <string name="temperature_exceeded_threshold">Temperature exceeded threshold</string>
    <string name="_2h_ago">2h ago</string>
    <string name="menu">Menu</string>
    <string name="air_quality">Air Quality</string>
    <string name="temperature">Temperature</string>
    <string name="logout">LOGOUT</string>
    <string name="option_image">option_image</string>
    <string name="close_icon">close_icon</string>
    <string name="neurovent">NeuroVent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressure">Pressure</string>
    <string name="logo">Logo</string>
    <string name="options">Options</string>
    <string name="unstable_pressure">Unstable Pressure</string>
    <string name="pressure_fluctuations_detected">Pressure fluctuations detected</string>
    <string name="_4h_ago">4h_ago</string>
    <string name="icon">Icon</string>

</resources>