<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="@drawable/item_background"
    android:gravity="center_vertical"
    android:layout_marginBottom="4dp">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_temp"
        android:layout_marginEnd="12dp"
        android:contentDescription="Icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overheating"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_exceeded_threshold"
            android:textSize="14sp"
            android:textColor="#888888" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2h_ago"
        android:textSize="12sp"
        android:textColor="#888888" />
</LinearLayout>
