<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Green"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/neuro_vent_caption"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/option_image"
            android:src="@drawable/option_image" />
    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/menu"
        android:layout_below="@id/header" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:contextClickable="true"
        android:elevation="10dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:itemIconSize="22dp"
        app:itemIconTint="@drawable/tab_color"
        app:itemTextColor="@drawable/tab_color"
        app:labelVisibilityMode="labeled"
        app:layout_scrollFlags="scroll|enterAlways"
        app:menu="@menu/bottom_menu" />

</RelativeLayout>