<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_background">

    <!-- Top Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#4CAF50"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_gravity="bottom"
            android:contentDescription="Logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"

            />
        <!--android:src="@drawable/ic_logo" -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stats"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="61dp"
            android:layout_height="49dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_menu" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temperature Trend"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-20°C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last 24 Hours   -10%"
                android:textSize="14sp"
                android:textColor="#FF0000"
                android:layout_marginTop="2dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Graph"
                android:scaleType="fitCenter"
                android:src="@drawable/sample_graph" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temperature Trend"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#333333" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-20°C"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginTop="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last 24 Hours   -10%"
                android:textSize="14sp"
                android:textColor="#FF0000"
                android:layout_marginTop="2dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:layout_marginTop="8dp"
                android:contentDescription="Graph"
                android:scaleType="fitCenter"
                android:src="@drawable/sample_graph" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center">

        <!-- Dashboard -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_dashboard"
                android:contentDescription="@string/dashboard"
                android:background="@drawable/circle_bg"
                android:padding="8dp"
                android:scaleType="centerInside" />
        </LinearLayout>

        <!-- Alerts -->
        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="57dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/circle_bg"
                android:contentDescription="@string/alerts"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_alerts" />
        </LinearLayout>

        <!-- Stats -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/nav_stats"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_stats"
                android:contentDescription="@string/stats"
                android:background="@drawable/circle_bg"
                android:padding="8dp"
                android:scaleType="centerInside" />
        </LinearLayout>

        <!-- Control -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/nav_control"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_control"
                android:contentDescription="@string/control"
                android:background="@drawable/circle_bg"
                android:padding="8dp"
                android:scaleType="centerInside" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
